<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeckActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#404040"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deckTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="#00C13B3B"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/DeckTitle_Title"
            android:textColor="#1ED1E9"
            android:textSize="25sp"
            android:translationX="0dp"
            android:translationY="0dp" />

        <Button
            android:id="@+id/addCardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:text="@string/addCardButton_Text"
            android:textSize="9sp"
            android:translationX="0dp"
            android:translationY="0dp" />

        <Button
            android:id="@+id/reviewDeckButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:text="@string/reviewDeckButton_Text"
            android:textSize="9sp" />

        <Button
            android:id="@+id/editCurrentDeckButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:text="@string/editCurrentDeckButton_Text"
            android:textSize="9sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="414dp"
        android:layout_height="611dp">

        <ListView
            android:id="@+id/cardListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>